[package]
name = "wasm-ticker"
description = "Non-block tick executor for WebAssembly Rust"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
include = ["/src", "LICENSE"]
rust-version = "1.57"

authors = ["Fachep"]
categories = ["asynchronous", "wasm"]
readme = "README.md"
repository = "https://github.com/fachep/wasm-ticker"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["MessageChannel", "MessagePort"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
wasm-bindgen-futures = "0.4"
